--- a/src/SerialLoops/Views/Editors/MapEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/MapEditorView.axaml
@@ -11,26 +11,39 @@
              x:Class="SerialLoops.Views.Editors.MapEditorView">
     <UserControl.Resources>
         <utility:SKAvaloniaBrushConverter x:Key="BrushConverter"/>
+        <utility:ShortSubtractionConverter x:Key="SubtractionConverter"/>
     </UserControl.Resources>
 
     <Grid RowDefinitions="Auto,Auto,Auto,*">
-        <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="20" Spacing="10" HorizontalAlignment="Center">
-            <CheckBox IsChecked="{Binding BgLayerDisplayed}" Content="{x:Static assets:Strings.BG_Layer}"
-                      HorizontalAlignment="Center"/>
-            <CheckBox IsChecked="{Binding BgObjectLayerDisplayed}" Content="{x:Static assets:Strings.BG_Object_Layer}"
-                      HorizontalAlignment="Center"/>
-            <CheckBox IsChecked="{Binding ObjectLayerDisplayed}" Content="{x:Static assets:Strings.Object_Layer}"
-                      HorizontalAlignment="Center"/>
-            <CheckBox IsChecked="{Binding ScrollingBgDisplayed}" Content="{x:Static assets:Strings.Scrolling_BG}"
-                      HorizontalAlignment="Center"/>
-            <CheckBox IsChecked="{Binding InfoLayerDisplayed}" Content="{x:Static assets:Strings.Info_Layer}"
-                      HorizontalAlignment="Center"/>
+        <StackPanel Grid.Row="0" Orientation="Vertical" Margin="20" Spacing="10" HorizontalAlignment="Center">
+            <StackPanel Orientation="Horizontal" Spacing="10" HorizontalAlignment="Center">
+                <CheckBox IsChecked="{Binding BgLayerDisplayed}" Content="{x:Static assets:Strings.BG_Layer}"
+                          HorizontalAlignment="Center"/>
+                <CheckBox IsChecked="{Binding BgObjectLayerDisplayed}" Content="{x:Static assets:Strings.BG_Object_Layer}"
+                          HorizontalAlignment="Center"/>
+                <CheckBox IsChecked="{Binding BgOcclusionLayerDisplayed}" Content="{x:Static assets:Strings.BG_Occlusion_Layer}"
+                          HorizontalAlignment="Center"/>
+                <CheckBox IsChecked="{Binding ObjectLayerDisplayed}" Content="{x:Static assets:Strings.Object_Layer}"
+                          HorizontalAlignment="Center"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" Spacing="10" HorizontalAlignment="Center">
+                <CheckBox IsChecked="{Binding ScrollingBgDisplayed}" Content="{x:Static assets:Strings.Scrolling_BG}"
+                          HorizontalAlignment="Center"/>
+                <CheckBox IsChecked="{Binding InfoLayerDisplayed}" Content="{x:Static assets:Strings.Info_Layer}"
+                          HorizontalAlignment="Center"/>
+                <CheckBox IsChecked="{Binding BgJunkLayerDisplayed}" Content="{x:Static assets:Strings.BG_Junk_Layer}"
+                          HorizontalAlignment="Center"/>
+            </StackPanel>
         </StackPanel>
 
         <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="20" Spacing="10" HorizontalAlignment="Center">
             <CheckBox IsChecked="{Binding DrawPathingMap}" Content="{x:Static assets:Strings.Draw_Pathing_Map}"
                       HorizontalAlignment="Center"/>
             <CheckBox IsChecked="{Binding DrawStartingPoint}" Content="{x:Static assets:Strings.Draw_Starting_Point}"
+                      HorizontalAlignment="Center"/>
+            <CheckBox IsChecked="{Binding DrawOrigin}" Content="{x:Static assets:Strings.Draw_Origin}"
+                      HorizontalAlignment="Center"/>
+            <CheckBox IsChecked="{Binding DrawBoundary}" Content="{x:Static assets:Strings.Draw_Boundary}"
                       HorizontalAlignment="Center"/>
         </StackPanel>
 
@@ -50,6 +63,9 @@
                     <ItemsRepeater.ItemTemplate>
                         <DataTemplate DataType="vm:ScrollingBgWrapper">
                             <ItemsControl ItemsSource="{Binding ScrollingBg}">
+                                <ItemsControl.RenderTransform>
+                                    <ScaleTransform ScaleX="{Binding ScaleX}" ScaleY="{Binding ScaleY}"/>
+                                </ItemsControl.RenderTransform>
                                 <ItemsControl.ItemsPanel>
                                     <ItemsPanelTemplate>
                                         <Canvas Width="{Binding TileWidth}" Height="{Binding TileHeight}"/>
@@ -94,8 +110,8 @@
                     </ItemsControl.Styles>
                 </ItemsControl>
 
-                <!-- Object Layer -->
-                <ItemsControl ItemsSource="{Binding ObjectLayer}" IsVisible="{Binding ObjectLayerDisplayed}">
+                <!-- Unknown Layer -->
+                <ItemsControl ItemsSource="{Binding BgOcclusionLayer}" IsVisible="{Binding BgOcclusionLayerDisplayed}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
                             <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"/>
@@ -115,8 +131,8 @@
                     </ItemsControl.Styles>
                 </ItemsControl>
 
-                <!-- Info Layer -->
-                <ItemsControl ItemsSource="{Binding InfoLayer}" IsVisible="{Binding InfoLayerDisplayed}">
+                <!-- BG Junk Layer -->
+                <ItemsControl ItemsSource="{Binding BgJunkLayer}" IsVisible="{Binding BgJunkLayerDisplayed}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
                             <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"/>
@@ -124,8 +140,29 @@
                     </ItemsControl.ItemsPanel>
                     <ItemsControl.ItemTemplate>
                         <DataTemplate DataType="models:LayoutEntryWithImage">
-                            <Rectangle Stroke="{Binding Tint, Converter={StaticResource BrushConverter}}"
-                                       StrokeThickness="4" Width="{Binding ScreenWidth}" Height="{Binding ScreenHeight}"/>
+                            <Image Source="{Binding CroppedImage, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
+                                   Stretch="Fill" Width="{Binding Width}" Height="{Binding Height}"/>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                    <ItemsControl.Styles>
+                        <Style Selector="ItemsControl > ContentPresenter" x:DataType="models:LayoutEntryWithImage">
+                            <Setter Property="(Canvas.Left)" Value="{Binding ScreenX}"/>
+                            <Setter Property="(Canvas.Top)" Value="{Binding ScreenY}"/>
+                        </Style>
+                    </ItemsControl.Styles>
+                </ItemsControl>
+
+                <!-- Object Layer -->
+                <ItemsControl ItemsSource="{Binding ObjectLayer}" IsVisible="{Binding ObjectLayerDisplayed}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate DataType="models:LayoutEntryWithImage">
+                            <Image Source="{Binding CroppedImage, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
+                                   Stretch="Fill" Width="{Binding Width}" Height="{Binding Height}"/>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                     <ItemsControl.Styles>
@@ -159,6 +196,36 @@
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
+
+                <!-- Info Layer -->
+                <ItemsControl ItemsSource="{Binding InfoLayer}" IsVisible="{Binding InfoLayerDisplayed}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate DataType="models:LayoutEntryWithImage">
+                            <Rectangle Stroke="{Binding Tint, Converter={StaticResource BrushConverter}}"
+                                       StrokeThickness="4" Width="{Binding ScreenWidth}" Height="{Binding ScreenHeight}"/>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                    <ItemsControl.Styles>
+                        <Style Selector="ItemsControl > ContentPresenter" x:DataType="models:LayoutEntryWithImage">
+                            <Setter Property="(Canvas.Left)" Value="{Binding ScreenX}"/>
+                            <Setter Property="(Canvas.Top)" Value="{Binding ScreenY}"/>
+                        </Style>
+                    </ItemsControl.Styles>
+                </ItemsControl>
+
+                <!-- Origin should be centered, so we use converters to make the visualization's center be precisely on its point -->
+                <Ellipse Fill="{Binding OriginColor, Converter={StaticResource BrushConverter}}" Width="8" Height="8" IsVisible="{Binding DrawOrigin}"
+                         Canvas.Left="{Binding OriginX, Converter={StaticResource SubtractionConverter}, ConverterParameter=4}"
+                         Canvas.Top="{Binding OriginY, Converter={StaticResource SubtractionConverter}, ConverterParameter=4}"/>
+
+                <Rectangle Stroke="{Binding BoundaryColor, Converter={StaticResource BrushConverter}}" StrokeThickness="3" IsVisible="{Binding DrawBoundary}"
+                           Canvas.Left="{Binding BoundaryX}" Canvas.Top="{Binding BoundaryY}"
+                           Width="{Binding BoundaryWidth}" Height="{Binding BoundaryHeight}"/>
 
                 <Svg Path="avares://SerialLoops/Assets/Icons/Camera.svg" Width="32" Height="32" Canvas.Left="{Binding StartingPointX}"
                      Canvas.Top="{Binding StartingPointY}" IsVisible="{Binding DrawStartingPoint}"/>
