Repair Image crop/resize dialog

--- a/src/SerialLoops/Views/Dialogs/ImageCropResizeDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/ImageCropResizeDialog.axaml
@@ -6,6 +6,8 @@
         xmlns:assets="using:SerialLoops.Assets"
         xmlns:controls="using:SerialLoops.Controls"
         xmlns:gbox="using:GroupBox.Avalonia.Controls"
+        xmlns:paz="using:Avalonia.Controls.PanAndZoom"
+        xmlns:utility="using:SerialLoops.Utility"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:DataType="vm:ImageCropResizeDialogViewModel"
         x:Class="SerialLoops.Views.Dialogs.ImageCropResizeDialog"
@@ -17,13 +19,29 @@
         Name="ICRDialog">
     <StackPanel Orientation="Vertical" Spacing="5" HorizontalAlignment="Center">
         <StackPanel Orientation="Horizontal" Margin="5">
-            <controls:SKCropResizeCanvas SourceBitmap="{Binding StartImage}" FinalBitmap="{Binding FinalImage}"
-                                         SourceWidth="{Binding SourceWidth}" SourceHeight="{Binding SourceHeight}"
-                                         PreviewWidth="{Binding PreviewWidth}" PreviewHeight="{Binding PreviewHeight}"
-                                         ImageLocation="{Binding ImageLocation}"
-                                         SelectionAreaLocation="{Binding SelectionLocation}"
-                                         PreserveAspectRatio="{Binding PreserveAspectRatio}"
-                                         Width="650" Height="600" Name="PreviewCanvas"/>
+            <Canvas Width="650" Height="600" ClipToBounds="True" Name="MainCanvas">
+                <paz:ZoomBorder Stretch="None" ZoomSpeed="1.2" ClipToBounds="True" Focusable="True"
+                                VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
+                                EnablePan="True" PanButton="Left" Name="Paz"
+                                KeyDown="Paz_OnKeyDown">
+                    <Image Source="{Binding StartImage}"/>
+                </paz:ZoomBorder>
+                <Rectangle Fill="Gray" Opacity="0.5"
+                           Canvas.Left="0"
+                           Canvas.Top="{Binding BoxHeight}"
+                           Width="{Binding BoxWidth}"
+                           Height="{Binding PreviewHeight}"/>
+                <Rectangle Fill="Gray" Opacity="0.5"
+                           Canvas.Left="{Binding BoxWidth}"
+                           Canvas.Top="0"
+                           Width="{Binding PreviewWidth}"
+                           Height="{Binding BoxHeight}"/>
+                <Rectangle Fill="Gray" Opacity="0.5"
+                           Canvas.Left="{Binding BoxWidth}"
+                           Canvas.Top="{Binding BoxHeight}"
+                           Width="{Binding PreviewWidth}"
+                           Height="{Binding PreviewHeight}"/>
+            </Canvas>
             <StackPanel Orientation="Vertical" Spacing="5">
                 <gbox:GroupBox Header="{x:Static assets:Strings.Scale_Image}" Theme="{StaticResource GroupBoxClassic}"
                                Width="200" Padding="5">
@@ -31,8 +49,8 @@
                         <StackPanel Orientation="Horizontal" Spacing="3" VerticalAlignment="Center" HorizontalAlignment="Right">
                             <TextBlock Text="{x:Static assets:Strings.Size_}"/>
                             <StackPanel Orientation="Vertical">
-                                <NumericUpDown Name="WidthStepper" Value="{Binding #PreviewCanvas.PreviewWidth}" />
-                                <NumericUpDown Name="HeightStepper" Value="{Binding #PreviewCanvas.PreviewHeight}" />
+                                <!-- <NumericUpDown Name="WidthStepper" Value="{Binding #PreviewCanvas.PreviewWidth}" /> -->
+                                <!-- <NumericUpDown Name="HeightStepper" Value="{Binding #PreviewCanvas.PreviewHeight}" /> -->
                             </StackPanel>
                         </StackPanel>
                         <StackPanel Orientation="Horizontal" Spacing="3" VerticalAlignment="Center">
@@ -41,28 +59,12 @@
                         </StackPanel>
                         <StackPanel Orientation="Horizontal" Spacing="3" VerticalAlignment="Center">
                             <TextBlock Text="{x:Static assets:Strings.Scale_to_Fit_}"/>
-                            <Button Content="{x:Static assets:Strings.Apply}" Command="{Binding ScaleToFitCommand}"/>
-                        </StackPanel>
-                    </StackPanel>
-                </gbox:GroupBox>
-                <gbox:GroupBox Header="{x:Static assets:Strings.Position_Image}" Theme="{StaticResource GroupBoxClassic}"
-                               Width="200" Padding="5">
-                    <StackPanel Orientation="Vertical" Spacing="5" Margin="5" VerticalAlignment="Center">
-                        <StackPanel Orientation="Horizontal" Spacing="3">
-                            <TextBlock Text="{x:Static assets:Strings.Position_}"/>
-                            <StackPanel Orientation="Vertical">
-                                <NumericUpDown Name="XStepper" Value="{Binding #PreviewCanvas.ImageLocation.Value.X}"/>
-                                <NumericUpDown Name="YStepper" Value="{Binding #PreviewCanvas.ImageLocation.Value.Y}"/>
-                            </StackPanel>
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal" Spacing="3" VerticalAlignment="Center">
-                            <TextBlock Text="{x:Static assets:Strings.Reset_}"/>
-                            <Button Content="{x:Static assets:Strings.Apply}" Command="{Binding ResetPositionCommand}"/>
+                            <Button Content="{x:Static assets:Strings.Apply}" Command="{Binding ScaleToFitCommand}"
+                                    CommandParameter="{Binding #ICRDialog}"/>
                         </StackPanel>
                     </StackPanel>
                 </gbox:GroupBox>
                 <StackPanel Orientation="Vertical" HorizontalAlignment="Center" Width="200" Margin="5">
-                    <TextBlock Text="{x:Static assets:Strings.Ctrl_Scroll___Scale_Image}"/>
                     <TextBlock Text="{x:Static assets:Strings.Arrow_Keys___Move_Image}"/>
                 </StackPanel>
             </StackPanel>
