--- a/src/SerialLoops/Views/Editors/GroupSelectionEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/GroupSelectionEditorView.axaml
@@ -3,12 +3,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:vm="using:SerialLoops.ViewModels.Editors"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:assets="using:SerialLoops.Assets"
-             xmlns:controls="using:SerialLoops.Controls"
-             xmlns:utility="using:SerialLoops.Utility"
-             xmlns:gbox="using:GroupBox.Avalonia.Controls"
-             xmlns:items="using:SerialLoops.Lib.Items"
-             xmlns:editors="clr-namespace:SerialLoops.Views.Editors"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="vm:GroupSelectionEditorViewModel"
              x:Class="SerialLoops.Views.Editors.GroupSelectionEditorView">
@@ -17,71 +11,11 @@
         <ItemsControl ItemsSource="{Binding Activities}">
             <ItemsControl.DataTemplates>
                 <DataTemplate DataType="vm:ScenarioActivityViewModel">
-                    <gbox:GroupBox Header="{Binding Title}" Theme="{StaticResource GroupBoxClassic}">
-                        <StackPanel Orientation="Vertical" Spacing="5" Margin="3">
-                            <StackPanel Orientation="Horizontal" Spacing="5">
-                                <TextBlock Text="{x:Static assets:Strings.Haruhi_Present}"/>
-                                <CheckBox IsChecked="{Binding Activity.HaruhiPresent}"/>
-                            </StackPanel>
-                            <StackPanel Orientation="Horizontal" Spacing="5">
-                                <TextBlock Text="{x:Static assets:Strings.Required_Brigade_Member}"/>
-                                <TextBlock Text="{Binding Activity.RequiredBrigadeMember}"/>
-                            </StackPanel>
-                            <StackPanel Orientation="Horizontal" Spacing="5">
-                                <TextBlock Text="{x:Static assets:Strings.Future_Description}"/>
-                                <TextBox Height="50" Width="400" Text="{Binding FutureDesc}"/>
-                            </StackPanel>
-                            <StackPanel Orientation="Horizontal" Spacing="5">
-                                <TextBlock Text="{x:Static assets:Strings.Past_Description}"/>
-                                <TextBox Height="50" Width="400" Text="{Binding PastDesc}"/>
-                            </StackPanel>
-                            <gbox:GroupBox Header="{x:Static assets:Strings.Optimal_Group}">
-                                <StackPanel Orientation="Horizontal" Spacing="5">
-                                    <TextBlock Text="{Binding Activity.OptimalGroup[0]}"/>
-                                    <TextBlock Text="{Binding Activity.OptimalGroup[1]}"/>
-                                    <TextBlock Text="{Binding Activity.OptimalGroup[2]}"/>
-                                </StackPanel>
-                            </gbox:GroupBox>
-                            <gbox:GroupBox Header="{x:Static assets:Strings.Worst_Group}" Theme="{StaticResource GroupBoxClassic}">
-                                <StackPanel Orientation="Horizontal" Spacing="5">
-                                    <TextBlock Text="{Binding Activity.WorstGroup[0]}"/>
-                                    <TextBlock Text="{Binding Activity.WorstGroup[1]}"/>
-                                    <TextBlock Text="{Binding Activity.WorstGroup[2]}"/>
-                                </StackPanel>
-                            </gbox:GroupBox>
-                            <gbox:GroupBox Header="{x:Static assets:Strings.Routes}" Theme="{StaticResource GroupBoxClassic}" Margin="10">
-                                <ItemsControl ItemsSource="{Binding Routes}">
-                                    <ItemsControl.DataTemplates>
-                                        <DataTemplate x:DataType="vm:ScenarioRouteViewModel">
-                                            <gbox:GroupBox Header="{Binding Title}" Theme="{StaticResource GroupBoxClassic}" Margin="5">
-                                                <StackPanel Orientation="Vertical" Spacing="3">
-                                                    <StackPanel Orientation="Horizontal" Spacing="5">
-                                                        <TextBlock Text="{x:Static assets:Strings.Script}"/>
-                                                        <controls:ItemLink Item="{Binding Script}" Tabs="{Binding $parent[editors:GroupSelectionEditorView].((vm:GroupSelectionEditorViewModel)DataContext).Tabs}"/>
-                                                    </StackPanel>
-                                                    <StackPanel Orientation="Horizontal" Spacing="5">
-                                                        <TextBlock Text="{x:Static assets:Strings.Characters_Involved}"/>
-                                                        <TextBlock Text="{Binding Route.CharactersInvolved, Converter={x:Static utility:SLConverters.ListDisplayConverter}}"/>
-                                                    </StackPanel>
-                                                    <gbox:GroupBox Header="{x:Static assets:Strings.Kyonless_Topics}" Theme="{StaticResource GroupBoxClassic}" Margin="3">
-                                                        <StackPanel Orientation="Vertical" Spacing="3">
-                                                            <ItemsControl ItemsSource="{Binding KyonlessTopics}">
-                                                                <ItemsControl.DataTemplates>
-                                                                    <DataTemplate x:DataType="items:TopicItem">
-                                                                        <controls:ItemLink Item="{Binding}" Tabs="{Binding $parent[editors:GroupSelectionEditorView].((vm:GroupSelectionEditorViewModel)DataContext).Tabs}"/>
-                                                                    </DataTemplate>
-                                                                </ItemsControl.DataTemplates>
-                                                            </ItemsControl>
-                                                        </StackPanel>
-                                                    </gbox:GroupBox>
-                                                </StackPanel>
-                                            </gbox:GroupBox>
-                                        </DataTemplate>
-                                    </ItemsControl.DataTemplates>
-                                </ItemsControl>
-                            </gbox:GroupBox>
-                        </StackPanel>
-                    </gbox:GroupBox>
+                    <Canvas Width="256" Height="192">
+                        <Rectangle Fill="{Binding BackgroundColor}" Canvas.Left="{Binding CanvasLeft}"
+                                   Canvas.Top="{Binding CanvasTop}" Width="{Binding CanvasWidth}"
+                                   Height="{Binding CanvasHeight}"/>
+                    </Canvas>
                 </DataTemplate>
             </ItemsControl.DataTemplates>
         </ItemsControl>
