--- a/src/SerialLoops/Views/Editors/VoicedLineEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/VoicedLineEditorView.axaml
@@ -13,9 +13,9 @@
     <Grid RowDefinitions="Auto,Auto,Auto,*" ColumnDefinitions="*,Auto">
         <controls:SoundPlayerPanel Name="Player" Grid.Row="0" Grid.Column="0" DataContext="{Binding VcePlayer}"/>
         <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Horizontal" Spacing="3" Margin="5">
-            <Button Content="{x:Static assets:Strings.Replace}"/>
-            <Button Content="{x:Static assets:Strings.Export}"/>
-            <Button Content="{x:Static assets:Strings.Restore}"/>
+            <Button Content="{x:Static assets:Strings.Replace}" Command="{Binding ReplaceCommand}"/>
+            <Button Content="{x:Static assets:Strings.Export}" Command="{Binding ExportCommand}"/>
+            <Button Content="{x:Static assets:Strings.Restore}" Command="{Binding RestoreCommand}"/>
         </StackPanel>
         <gbox:GroupBox Header="{x:Static assets:Strings.Edit_Subtitle}" Theme="{StaticResource GroupBoxClassic}" Margin="5"
                        IsVisible="{Binding SubsEnabled}" Grid.Row="2" Grid.Column="0">
@@ -25,10 +25,24 @@
                     <TextBox Text="{Binding Subtitle, Mode=TwoWay}" Watermark="{x:Static assets:Strings.Enter_subtitle_text___}" Width="400"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Spacing="20">
+                    <ComboBox ItemsSource="{Binding SubtitleColors}" SelectedItem="{Binding SubtitleColor}"
+                              VerticalAlignment="Center">
+                        <ComboBox.ItemTemplate>
+                            <DataTemplate DataType="vm:LocalizedDialogueColor">
+                                <TextBlock Text="{Binding DisplayText}"/>
+                            </DataTemplate>
+                        </ComboBox.ItemTemplate>
+                        <ComboBox.ItemContainerTheme>
+                            <ControlTheme TargetType="ComboBoxItem" x:DataType="vm:LocalizedDialogueColor" BasedOn="{StaticResource {x:Type ComboBoxItem}}">
+                                <Setter Property="TextSearch.Text" Value="{Binding DisplayText}" />
+                            </ControlTheme>
+                        </ComboBox.ItemContainerTheme>
+                    </ComboBox>
                     <StackPanel Spacing="3" Orientation="Horizontal" VerticalAlignment="Center">
                         <TextBlock Text="{x:Static assets:Strings.Target_Screen}"/>
                         <controls:ScreenSelector DataContext="{Binding ScreenSelector}"/>
                     </StackPanel>
+                    <CheckBox Content="{x:Static assets:Strings.Force_Drop_Shadow}" IsChecked="{Binding ForceDropShadow}"/>
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Spacing="3">
                         <TextBlock Text="{x:Static assets:Strings.Screen_Position}"/>
                         <StackPanel Orientation="Vertical" Spacing="2">
